--- a/category1/index.html
+++ b/category1/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Category1
-permalink: /category1/ 
+title: 시스템프로그래밍
+permalink: /system_prog/ 
 ---
 
 {% include category.html %}
