그냥 단순하게

--- a/category1/index.html
+++ b/category1/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: 시스템프로그래밍
-permalink: /system_prog/ 
+title: 시스템 프로그래밍
+permalink: /시스템 프로그래밍/ 
 ---
 
 {% include category.html %}
